---
source: crates/flowscope-core/tests/snapshots.rs
expression: clean_result
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "SELECT",
      "joinCount": 1,
      "complexityScore": 20
    }
  ],
  "nodes": [
    {
      "id": "column_26289b33f575fdbb",
      "type": "column",
      "label": "user_id",
      "canonicalName": {
        "name": "user_id"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "column_5df403808001f48c",
      "type": "column",
      "label": "order_total",
      "canonicalName": {
        "name": "order_total"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "column_b9951b2be22a3b40",
      "type": "column",
      "label": "user_id",
      "qualifiedName": "my-company.core.users.user_id",
      "canonicalName": {
        "name": "my-company.core.users.user_id"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "column_c50671ff71a3c3cf",
      "type": "column",
      "label": "order_total",
      "qualifiedName": "my-company.sales.orders.order_total",
      "canonicalName": {
        "name": "my-company.sales.orders.order_total"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "output_74d22f755ec62dbc",
      "type": "output",
      "label": "Output",
      "canonicalName": {
        "name": "Output"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "table_3c0b479aec754659",
      "type": "table",
      "label": "orders",
      "qualifiedName": "my-company.sales.orders",
      "canonicalName": {
        "catalog": "my-company",
        "schema": "sales",
        "name": "orders"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "table_fdcf1c848327037a",
      "type": "table",
      "label": "users",
      "qualifiedName": "my-company.core.users",
      "canonicalName": {
        "catalog": "my-company",
        "schema": "core",
        "name": "users"
      },
      "statementIds": [
        0
      ]
    }
  ],
  "edges": [
    {
      "id": "edge_9877b09476f952c4",
      "from": "output_74d22f755ec62dbc",
      "to": "column_5df403808001f48c",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_a9eb419b8e270def",
      "from": "column_c50671ff71a3c3cf",
      "to": "column_5df403808001f48c",
      "type": "data_flow",
      "joinType": "INNER",
      "joinCondition": "u.user_id = o.user_id",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_ad965fe26aeb18ca",
      "from": "table_fdcf1c848327037a",
      "to": "column_b9951b2be22a3b40",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_baafac940f6b5cde",
      "from": "table_3c0b479aec754659",
      "to": "column_c50671ff71a3c3cf",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_e5a9dfe8f279b310",
      "from": "output_74d22f755ec62dbc",
      "to": "column_26289b33f575fdbb",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_f828e3fef4e46e28",
      "from": "column_b9951b2be22a3b40",
      "to": "column_26289b33f575fdbb",
      "type": "data_flow",
      "statementIds": [
        0
      ]
    }
  ],
  "issues": [],
  "summary": {
    "statementCount": 1,
    "tableCount": 2,
    "columnCount": 4,
    "joinCount": 1,
    "complexityScore": 20,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 0
    },
    "hasErrors": false
  },
  "resolvedSchema": {
    "tables": [
      {
        "catalog": "my-company",
        "schema": "sales",
        "name": "orders",
        "columns": [
          {
            "name": "order_total",
            "origin": "implied"
          },
          {
            "name": "user_id",
            "origin": "implied",
            "foreignKey": {
              "table": "my-company.core.users",
              "column": "user_id"
            }
          }
        ],
        "origin": "implied",
        "sourceStatementIndex": 0,
        "updatedAt": "2024-01-01T00:00:00Z",
        "constraints": [
          {
            "constraintType": "foreign_key",
            "columns": [
              "user_id"
            ],
            "referencedTable": "my-company.core.users",
            "referencedColumns": [
              "user_id"
            ]
          }
        ]
      },
      {
        "catalog": "my-company",
        "schema": "core",
        "name": "users",
        "columns": [
          {
            "name": "user_id",
            "origin": "implied",
            "foreignKey": {
              "table": "my-company.sales.orders",
              "column": "user_id"
            }
          }
        ],
        "origin": "implied",
        "sourceStatementIndex": 0,
        "updatedAt": "2024-01-01T00:00:00Z",
        "constraints": [
          {
            "constraintType": "foreign_key",
            "columns": [
              "user_id"
            ],
            "referencedTable": "my-company.sales.orders",
            "referencedColumns": [
              "user_id"
            ]
          }
        ]
      }
    ]
  }
}
